<resources>
    <string name="app_name">TicTacToe</string>
    <string name="splash_text">Version 1.0</string>
    <string name="start">START GAME</string>
    <string name="button_">Click</string>
    <string name="turn">_</string>
    <string name="your_turn">Your Turn</string>
    <string name="ai_turn">AI turn</string>
    <string name="settings">SETTINGS</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="back">BACK</string>
    <string name="auto_reset">AUTO-RESET</string>
    <string name="resetGame">RESET GAME</string>
    <string name="start_over">RESTART GAME</string>
    <string name="start_plaYing">START PLAYING</string>

    <!-- Messages Preferences -->
    <string name="signature_title">main image</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="todo">ui</string>
</resources>