<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/game_iu_"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_game_ui"
    android:padding="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    tools:context=".GameUI">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="567dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/b8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:width="102dp"
        android:height="100dp"
        android:background="@drawable/choice_btn_bg"
        android:text="@string/button_"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintStart_toEndOf="@+id/b7"
        app:layout_constraintTop_toBottomOf="@+id/b5"
        app:layout_constraintVertical_bias="0.08" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/b3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="132dp"
        android:width="102dp"
        android:height="100dp"
        android:background="@drawable/choice_btn_bg"
        android:text="@string/button_"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toEndOf="@+id/b2"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/b6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:width="102dp"
        android:height="100dp"
        android:background="@drawable/choice_btn_bg"
        android:text="@string/button_"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintHorizontal_bias="0.415"
        app:layout_constraintStart_toEndOf="@+id/b5"
        app:layout_constraintTop_toBottomOf="@+id/b3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/b7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:width="102dp"
        android:height="100dp"
        android:background="@drawable/choice_btn_bg"
        android:text="@string/button_"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toBottomOf="@+id/b4"
        app:layout_constraintVertical_bias="0.098" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/b2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="132dp"
        android:width="102dp"
        android:height="100dp"
        android:background="@drawable/choice_btn_bg"
        android:text="@string/button_"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/b1"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/b5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:width="102dp"
        android:height="100dp"
        android:background="@drawable/choice_btn_bg"
        android:text="@string/button_"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/b4"
        app:layout_constraintTop_toBottomOf="@+id/b2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/b4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:width="102dp"
        android:height="100dp"
        android:background="@drawable/choice_btn_bg"
        android:text="@string/button_"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toBottomOf="@+id/b1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/b1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="132dp"
        android:width="102dp"
        android:height="100dp"
        android:background="@drawable/choice_btn_bg"
        android:text="@string/button_"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/b9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="32dp"
        android:width="102dp"
        android:height="100dp"
        android:background="@drawable/choice_btn_bg"
        android:text="@string/button_"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toEndOf="@+id/b8"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="0.857" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="655dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/settings_btn"
        android:layout_width="84dp"
        android:layout_height="29dp"
        android:background="@drawable/restart"
        android:gravity="center"
        android:text="@string/settings"
        android:textColor="@color/white_center"
        android:textFontWeight="500"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022"
        tools:ignore="TouchTargetSizeCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/b10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/restart"
        android:text="@string/start_over"
        android:textColor="@color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="112dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView"
        android:layout_width="248dp"
        android:layout_height="49dp"
        android:background="@drawable/custome_message"
        android:foregroundTint="#5B1678"
        android:gravity="center"
        android:text="TextView"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/guideline11"
        app:layout_constraintEnd_toStartOf="@+id/guideline10"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toTopOf="@+id/guideline12"
        app:layout_constraintVertical_bias="0.87" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="381dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="96dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="47dp" />

</androidx.constraintlayout.widget.ConstraintLayout>